--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,14 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "packages": [
-    "packages/*"
+    "packages/gamecenter",
+    "packages/tombala"
   ],
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "npmClient": "npm",
+  "command": {
+    "list": {
+      "includePrivate": true
+    }
+  }
 }
